fix: overflow-x hidden

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -15,6 +15,12 @@ body {
   margin: 0;
 }
 
+#root {
+  overflow-x: hidden;
+  position: relative;
+  z-index: 0;
+}
+
 body,
 html {
   font-family: var(--font-sans);
